java update stuff